--- a/Team3Shopping/appsettings.json
+++ b/Team3Shopping/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db_conn": "Server=localhost;Database=Team3Shoppingdb;Integrated Security = true"
+  }
 }
